# healthcheckbot

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  backends.py  command_handlers.py  docker-compose.yml  env.sample  filter_allowed_chats.py  main.py  models.py  persistence.py  pyproject.toml  pytest.ini  requirements.txt
.github/scripts/: test-gitops-release-notification.sh
.github/workflows/: deploy-bot.yml  test.yml
backends/: __init__.py  base_backend.py  entities.py  request_backend.py
commands/: __init__.py  add_service.py  check_all_services.py  error.py  handlers.py  list_services.py  remove_service.py
docs/: architecture.md  configuration.md  ddd-model.md  index.md  setup.md  telegram-commands.md
docs/changelog/: 2026-06-10-daily-consolidation.md  2026-06-10-initial-implementation.md  2026-06-10-pre-commit-config.md  2026-06-10-tortoise-orm-migration.md  2026-06-10-unit-tests.md
filters/: allowed_chats.py
models/: __init__.py  service.py
persistence/: __init__.py  base_persistence.py  local_json_repository.py
repositories/: __init__.py  service_repository.py
requirements/: dev.txt  pro.txt
src/healthchecker/: main.py
tests/: test_backends.py  test_command_handlers.py  test_models.py  test_services.py
tests/application/: test_check_all_urls.py  test_consolidate_summaries.py  test_get_results.py  test_manage_urls.py
tests/domain/: test_alert_model.py  test_daily_summary_model.py  test_health_check_model.py  test_health_check_service.py  test_url_model.py
(+41 files in other folders)
