[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "healthchecker"
version = "0.1.0"
description = "DDD health check application with Telegram bot"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot>=21",
    "httpx>=0.28",
    "python-dotenv>=1.2.2",
    "cryptography>=44",
    "tortoise-orm>=0.24",
    "aerich>=0.8",
    "aiomysql>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
lint.fixable = ["ALL"]
target-version = "py314"
line-length = 88
fix = true
show-fixes = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.aerich]
tortoise_orm = "healthchecker.infrastructure.persistence.tortoise_config.TORTOISE_CONFIG"
location = "./healthchecker/infrastructure/persistence/migrations"
src_folder = "."
